objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>APAC_Quote_Template__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Legal_Entity__c,&apos;&apos;)), false,
IF(AND (ISPICKVAL(Legal_Entity__c,&apos;&apos;),CPQ_Sales_Rep_Territory__c = &quot;JAPAN&quot;), TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APAC Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Austria_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;AUSTRIA&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Austria Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Belgium_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;BELGIUM&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Belgium Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Account_Name__c</fullName>
        <formula>SBQQ__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Alias__c</fullName>
        <description>Used as an internal identifier for the quote.</description>
        <inlineHelpText>Used as an internal identifier for the quote.</inlineHelpText>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Approvals_Region__c</fullName>
        <formula>TEXT(SBQQ__SalesRep__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approvals Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Cloud_Discount__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>Cloud Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Cloud_Gross_Price__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>Cloud Gross Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Cloud_Net_Price__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>Cloud Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Currency_Rate__c</fullName>
        <formula>CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Rate</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Discount_Grand_Total__c</fullName>
        <formula>IF(CONTAINS(TEXT(CurrencyIsoCode),&quot;JPY&quot;), ROUND(CPQ_License_Discount__c,0) + ROUND(CPQ_Maintenance_Discount__c,0) + ROUND(CPQ_Services_Discount__c,0) + ROUND(CPQ_Cloud_Discount__c,0), ROUND(CPQ_License_Discount__c,2) + ROUND(CPQ_Maintenance_Discount__c,2) + ROUND(CPQ_Services_Discount__c,2) + ROUND(CPQ_Cloud_Discount__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Has_Cloud_Quote_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to conditionally display cloud quote line section on output document.</description>
        <label>Has Cloud Quote Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Has_License_Quote_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to conditionally display license quote line section on output document.</description>
        <label>Has License Quote Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Has_Maintenance_Quote_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to conditionally display maintenance quote lines on output document.</description>
        <label>Has Maintenance Quote Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Has_Services_Quote_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to conditionally display services quote lines on output document.</description>
        <label>Has Services Quote Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Hide_Discounts__c</fullName>
        <formula>!CPQ_Show_Discounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Hide_Line_Item_Prices__c</fullName>
        <formula>!CPQ_Show_Line_Item_Prices__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Line Item Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Include_Cloud_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conditional checkbox for inclusion of the Cloud agreement additional document.</description>
        <label>Include Cloud Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Include_InfomatiX_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conditional checkbox for inclusion of the InfomatiX agreement additional document.</description>
        <label>Include InfomatiX Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Include_Informatics_Agreement_Japan__c</fullName>
        <formula>IF(AND(CPQ_Include_Informatics_Agreement__c = TRUE,APAC_Quote_Template__c = TRUE), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Informatics Agreement Japan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Include_Informatics_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conditional checkbox for inclusion of the Informatics agreement additional document.</description>
        <label>Include Informatics Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Include_Informatics_Agrmt_Non_APAC__c</fullName>
        <formula>IF(AND(Non_APAC_Quote_Template__c=TRUE, CPQ_Include_Informatics_Agreement__c=TRUE),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Informatics Agreement Non-APAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Include_SaaS_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include SaaS Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Level_1_Approver_ID__c</fullName>
        <formula>SBQQ__SalesRep__r.Manager.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 Approver ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_License_Discount__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>License Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_License_Gross_Price__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>License Gross Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_License_Net_Price__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>License Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_List_Grand_Total__c</fullName>
        <formula>SBQQ__ListAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Maintenance_Discount__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>Maintenance Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Maintenance_Gross_Price__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>Maintenance Gross Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Maintenance_Net_Price__c</fullName>
        <label>Maintenance Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Net_Grand_Total__c</fullName>
        <formula>IF(CONTAINS(TEXT(CurrencyIsoCode),&quot;JPY&quot;), ROUND(CPQ_License_Net_Price__c,0) + ROUND(CPQ_Maintenance_Net_Price__c,0) + ROUND(CPQ_Services_Net_Price__c,0) + ROUND(CPQ_Cloud_Net_Price__c,0), ROUND(CPQ_License_Net_Price__c,2) + ROUND(CPQ_Maintenance_Net_Price__c,2) + ROUND(CPQ_Services_Net_Price__c,2) + ROUND(CPQ_Cloud_Net_Price__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Notes_Were_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine approvals if notes were changed.</description>
        <label>Notes Were Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Reason_for_Request__c</fullName>
        <description>Used to enter reasons for quote exceptions that will be displayed to approvers upon submission.</description>
        <inlineHelpText>Used to enter reasons for quote exceptions that will be displayed to approvers upon submission.</inlineHelpText>
        <label>Reason for Request</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPQ_Sales_Rep_Sub_Region__c</fullName>
        <formula>TEXT(SBQQ__SalesRep__r.Sub_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Sales_Rep_Territory__c</fullName>
        <formula>TEXT(SBQQ__SalesRep__r.Territory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Segmented_Months__c</fullName>
        <description>Used to define the period of coverage for segmented line items.</description>
        <inlineHelpText>Used to define the period of coverage for segmented line items.</inlineHelpText>
        <label>Segmented Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Services_Discount__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>Services Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Services_Gross_Price__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>Services Gross Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Services_Net_Price__c</fullName>
        <description>Used for summary display on quote document.</description>
        <label>Services Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Show_Descriptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show product descriptions on quote document.</description>
        <inlineHelpText>Show product descriptions on quote document.</inlineHelpText>
        <label>Show Descriptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Show_Discounts__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used for quote document display.</description>
        <label>Show Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Show_Line_Item_Prices__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used for quote document display purposes.</description>
        <label>Show Line Item Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Show_Signature_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for quote document display purposes.</description>
        <label>Show Signature Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denmark_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;DENMARK&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denmark Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Manager__c</fullName>
        <formula>Owner:User.Direct_Manager__r.FirstName&amp;&quot; &quot;&amp;Owner:User.Direct_Manager__r.LastName</formula>
        <label>Direct Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentCurrencySymbol__c</fullName>
        <formula>CASE(CurrencyIsoCode,
&quot;CHF&quot;,&quot;Fr.&quot;,
&quot;EUR&quot;,&quot;€&quot;,
&quot;GBP&quot;,&quot;£&quot;,
&quot;JPY&quot;,&quot;¥&quot;,
&quot;USD&quot;,&quot;$&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocumentCurrencySymbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finland_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;FINLAND&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finland Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>France_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;FRANCE&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>France Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Germany_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;GERMANY&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Germany Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <formula>SBQQ__Account__r.PKI_Global_Region__c</formula>
        <label>Global Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ireland_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;IRELAND&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ireland Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Israel_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;ISRAEL&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Israel Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>DENMARK</fullName>
                </value>
                <value>
                    <fullName>FINLAND</fullName>
                </value>
                <value>
                    <fullName>GERMANY</fullName>
                </value>
                <value>
                    <fullName>NETHERLANDS</fullName>
                </value>
                <value>
                    <fullName>NORWAY</fullName>
                </value>
                <value>
                    <fullName>SWEDEN</fullName>
                </value>
                <value>
                    <fullName>SWITZERLAND</fullName>
                </value>
                <value>
                    <fullName>UNITEDKING</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>SPAIN</fullName>
                </value>
                <value>
                    <fullName>IRELAND</fullName>
                </value>
                <value>
                    <fullName>ISRAEL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Netherlands_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;NETHERLANDS&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Netherlands Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_APAC_Quote_Template__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Legal_Entity__c,&apos;&apos;)), false,
if(AND(ISPICKVAL(Legal_Entity__c,&apos;&apos;),NOT(CPQ_Sales_Rep_Territory__c=&apos;JAPAN&apos;)),true,
 false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-APAC Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Norway_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;NORWAY&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Norway Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oppt_Pricebook__c</fullName>
        <formula>SBQQ__Opportunity2__r.Pricebook2.Name</formula>
        <label>Oppt Pricebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Count__c</fullName>
        <formula>1</formula>
        <label>Quote Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Quote Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Template_Header__c</fullName>
        <formula>IF(AND(CPQ_Sales_Rep_Territory__c= &quot;JAPAN&quot;, ISPICKVAL(Legal_Entity__c, &apos;&apos;)) , &quot;PerkinElmer Japan Co. Ltd.&quot;, 
if(AND(ISPICKVAL(Legal_Entity__c, &quot;AUSTRIA&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer Vertriebs GmbH&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;BELGIUM&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer bvba/sprl&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;DENMARK&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer Danmark A/S&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;FINLAND&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer Finland OY&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;GERMANY&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer LAS (Germany) GmbH&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;NETHERLANDS&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer Nederland B.V.&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;SWEDEN&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer Sverige AB&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;SWITZERLAND&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer (Schweiz) AG&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;UNITEDKING&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer LAS (UK) Ltd&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;FRANCE&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer SAS&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;SPAIN&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer Espana S.L&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;IRELAND&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer Ireland Limited&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;ISRAEL&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer Israel&apos;,
if(AND(ISPICKVAL(Legal_Entity__c , &quot;NORWAY&quot;), NOT(ISPICKVAL(Legal_Entity__c, &apos;&apos;))),&apos;PerkinElmer Norge AS&apos;,
&quot;PerkinElmer Informatics, Inc.&quot; )))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Template Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Discount_Price_Column__c</fullName>
        <formula>AND(CPQ_Show_Discounts__c, CPQ_Show_Line_Item_Prices__c)</formula>
        <label>Show Discount Price Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Extended_Price_Column__c</fullName>
        <formula>AND(CPQ_Show_Discounts__c, CPQ_Show_Line_Item_Prices__c)</formula>
        <label>Show Extended Price Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_List_Price_Column__c</fullName>
        <formula>AND(CPQ_Show_Discounts__c, CPQ_Show_Line_Item_Prices__c)</formula>
        <label>Show List Price Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Net_Price_Column__c</fullName>
        <formula>CPQ_Show_Line_Item_Prices__c</formula>
        <label>Show Net Price Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spain_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;SPAIN&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spain Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmittedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sweden_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;SWEDEN&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sweden Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Switzerland_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;SWITZERLAND&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Switzerland Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_Notes__c</fullName>
        <inlineHelpText>For Contracts Use Only</inlineHelpText>
        <label>Terms Notes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <formula>SBQQ__Account__r.PKI_Test_Record__c</formula>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>United_King_Quote_Template__c</fullName>
        <formula>IF(ISPICKVAL(Legal_Entity__c,&quot;UNITEDKING&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>United King Quote Template</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Cannot_Create_Quote_on_Closed_Oppty</fullName>
        <active>false</active>
        <errorConditionFormula>ISNEW()
&amp;&amp;
ISPICKVAL(SBQQ__Opportunity2__r.StageName, &apos;Closed Won&apos;)</errorConditionFormula>
        <errorMessage>You cannot create a quote on a closed opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Updates_After_Pending_and_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
AND(PRIORVALUE(SBQQ__NetAmount__c)!=SBQQ__NetAmount__c,Approval_Locked__c!=TRUE, 
OR(ISPICKVAL(ApprovalStatus__c,&apos;Pending&apos;),ISPICKVAL(ApprovalStatus__c,&apos;Approved&apos;)) 
),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>To make additional changes, you must “Recall” the Quote approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Updates_after_Quote_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
AND(PRIORVALUE(SBQQ__NetAmount__c)!=SBQQ__NetAmount__c,Approval_Locked__c==TRUE),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Quote is Locked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notes_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
AND(
  OR(ISCHANGED(SBQQ__Notes__c),ISCHANGED(Terms_Notes__c)),
     ISPICKVAL(ApprovalStatus__c,&apos;Approved&apos;)
   ),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>To make additional changes, you must “Recall” the Quote approval</errorMessage>
    </validationRules>
</CustomObject>